--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,8 @@
-# SQLite version 3.x
-#   gem install sqlite3
+# Postgresql 
+#   gem install pg
 #
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
+#   Ensure the postgresql gem is defined in your Gemfile
+#   gem 'pg'
 #
 development:
   adapter: postgresql
